--- a/views/user/includes/footer.twig
+++ b/views/user/includes/footer.twig
@@ -45,18 +45,25 @@
 
 <script src="{{ env.APP_URL }}assets/dash/assets/plugins/global/plugins.bundle.js"></script>
 <script src="{{ env.APP_URL }}assets/dash/assets/js/scripts.bundle.js"></script>
-<script src="{{ env.APP_URL }}assets/dash/assets/plugins/custom/datatables/datatables.bundle.js"></script>
-<script src="{{ env.APP_URL }}assets/dash/assets/plugins/custom/fullcalendar/fullcalendar.bundle.js"></script>
-<script src="{{ env.APP_URL }}assets/dash/assets/plugins/custom/datatables/datatables.bundle.js"></script>
+<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/table/datatable/datatables.js"></script>
+<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/table/datatable/button-ext/dataTables.buttons.min.js"></script>
+{#<script src="{{ env.APP_URL }}assets/dash/assets/plugins/custom/datatables/datatables.bundle.js"></script>#}
+<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/fullcalendar/fullcalendar.min.js"></script>
+<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/uuid/uuid4.min.js"></script>
+<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/fullcalendar/custom-fullcalendar.js"></script>
+{#<script src="{{ env.APP_URL }}assets/dash/assets/plugins/custom/datatables/datatables.bundle.js"></script>#}
 <script src="{{ env.APP_URL }}assets/dash/assets/js/widgets.bundle.js"></script>
 <script src="{{ env.APP_URL }}assets/dash/assets/js/custom/widgets.js"></script>
 <script src="{{ env.APP_URL }}assets/dash/assets/js/custom/apps/chat/chat.js"></script>
 <script src="{{ env.APP_URL }}assets/dash/assets/js/custom/utilities/modals/upgrade-plan.js"></script>
 <script src="{{ env.APP_URL }}assets/dash/assets/js/custom/utilities/modals/create-app.js"></script>
 <script src="{{ env.APP_URL }}assets/dash/assets/js/custom/utilities/modals/users-search.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 {#<script src="{{ env.APP_URL }}assets/dashboard/src/assets/js/apps/invoice-edit.js"></script>#}
 {#<script src="{{ env.APP_URL }}assets/dashboard/src/assets/js/users/account-settings.js"></script>#}
+
+
+{#profile cdns#}
+
 <script>
     $(document).ready(function() {
         // Load the spinner initially
