--- a/views/user/clients/clients.twig
+++ b/views/user/clients/clients.twig
@@ -2,44 +2,63 @@
 {% block content %}
 
     <!--  BEGIN CONTENT AREA  -->
-    <div id="content" class="main-content">
-        <div class="layout-px-spacing">
+    <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+        <!--begin::Toolbar-->
+        <div class="toolbar" id="kt_toolbar">
+            <!--begin::Container-->
+            <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+                <!--begin::Page title-->
+                <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+                    <!--begin::Title-->
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Clients List</h1>
 
+                </div>
+
+            </div>
+            <!--end::Container-->
+        </div>
+    <div class="post d-flex flex-column-fluid" id="kt_post">
+    <!--begin::Container-->
+    <div id="kt_content_container" class="container-xxl">
+        <div class="layout-px-spacing">
             <div class="middle-content container-xxl p-0">
                 <div id="call-ringing"></div>
 
-                <!-- BREADCRUMB -->
-                <div class="page-meta">
-                    <nav class="breadcrumb-style-one" aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/user/dashboard">Dashboard</a></li>
-                            <li class="breadcrumb-item"><a href="#">Users</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Clients</li>
-                        </ol>
-                    </nav>
-                </div>
-                <!-- /BREADCRUMB -->
 
-                <div class="row layout-spacing mt-2">
-                    <div class="col-lg-12 justify-content-end text-end ">
-                        <button type="button" class="btn btn-primary  me-4" data-bs-toggle="modal" data-bs-target="#inputFormModal">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
-                            <span class="btn-text-inner">Invite</span>
-                        </button>
-                    </div>
-                </div>
+
                 <div class="row layout-spacing">
                     <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
-                        <div class="widget-content widget-content-area">
+                        <div class="widget-content widget-content-area card">
+                            <div class="card-header border-0 pt-6 w-100">
+                                    <div class="col-md-6 text-start">
+                                        <div class="d-flex align-items-center position-relative my-1">
+                                            <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
+                                            <span class="svg-icon svg-icon-1 position-absolute ms-6">
+													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+														<rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2" rx="1" transform="rotate(45 17.0365 15.1223)" fill="currentColor" />
+														<path d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z" fill="currentColor" />
+													</svg>
+												</span>
+                                            <!--end::Svg Icon-->
+                                            <input type="text" data-kt-customer-table-filter="search" id="search" class="form-control form-control-solid w-250px ps-15" placeholder="Search " />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 text-end">
+                                        <button type="button" class="btn btn-primary  me-4" data-bs-toggle="modal" data-bs-target="#inputFormModal">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
+                                            <span class="btn-text-inner">Invite</span>
+                                        </button>
+                                    </div>
+                            </div>
                             <div class="table-responsive">
-                                <table id="table"  class="table dt-table-hover" style="width:100%">
+                                <table id="table"  class="table table-row-dashed table-row-gray-300 align-middle gs-0 gy-4" style="width:100%">
                                     <thead>
                                     <tr>
-                                        <th> Id </th>
-                                        <th>Profile</th>
-                                        <th>Mobile No.</th>
-                                        <th >Status</th>
-                                        <th >Action</th>
+                                        <th class="min-w-40px"> Id </th>
+                                        <th class="min-w-125px">Profile</th>
+                                        <th class="min-w-125px">Mobile No.</th>
+                                        <th class="min-w-125px" >Status</th>
+                                        <th class="min-w-125px">Action</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -53,10 +72,10 @@
 
 
             </div>
-
         </div>
-
-
+    </div>
+    </div>
+    </div>
         <!-- Modal -->
         <div class="modal fade inputForm-modal" id="inputFormModal" tabindex="-1" role="dialog" aria-labelledby="inputFormModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -64,7 +83,7 @@
 
                     <div class="modal-header" id="inputFormModalLabel">
                         <h5 class="modal-title">Invite <b>Clients</b></h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
                     </div>
                     <div class="modal-body">
                         <form class="mt-0" id="inviteForm">
@@ -100,19 +119,6 @@
             </div>
         </div>
 
-
-
-
-        <!--  BEGIN FOOTER  -->
-        <div class="footer-wrapper">
-            <div class="footer-wrapper">
-                <div class="footer-section f-section-1">
-                    <p class="">Copyright © <span class="dynamic-year">2024</span> <a target="_blank" href="https://zotecsoft.com/">ZotecSoft</a>, All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-        <!--  END FOOTER  -->
-    </div>
     <div class="modal fade" id="editExampleModal" tabindex="-1" aria-labelledby="editExampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content bg-white">
@@ -181,6 +187,9 @@
                     {mData: 'statusView'},
                     {mData: 'action'},
                 ]
+            });
+            $('#search').on('keyup', function() {
+                $('#table').DataTable().search(this.value).draw();
             });
         });
         function send_invite() {
