--- a/views/user/includes/sidebar.twig
+++ b/views/user/includes/sidebar.twig
@@ -165,6 +165,7 @@
                         </a>
                     </div>
                 {% endif %}
+                {% if loginType == 'firm' %}
                 <div data-kt-menu-trigger="click" class="menu-item {% if route == '/user/invoices' or route == '/user/invoice/add'  %} here show {% endif %} menu-accordion">
 									<span class="menu-link">
 										<span class="menu-icon">
@@ -197,6 +198,21 @@
                         </div>
                     </div>
                 </div>
+                {% else %}
+                    <div class="menu-item">
+                        <a class="menu-link {% if route == '/user/invoices' %}active{% endif %}" href="/user/invoices">
+										<span class="menu-icon">
+											<!--begin::Svg Icon | path: icons/duotune/general/gen014.svg-->
+											<span class="svg-icon svg-icon-2">
+										 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
+
+											</span>
+                                            <!--end::Svg Icon-->
+										</span>
+                            <span class="menu-title">Invoice</span>
+                        </a>
+                    </div>
+                {% endif %}
                 {% if loginType == 'client' %}
                 <div class="menu-item">
                     <a class="menu-link {% if route == '/client/document' %}active{% endif %}" href="/client/document">
