--- a/views/user/includes/styles.twig
+++ b/views/user/includes/styles.twig
@@ -26,4 +26,8 @@
     .cke_notifications_area{
         display: none !important;
     }
+    .page-item.active .page-link{
+        background-color: #000 !important;
+        color: white !important;
+    }
 </style>
